# igwt_django_app

./: README.md  manage.py  pyproject.toml
igwt_app/: apps.py  urls.py  views.py
igwt_app/templates/: igwt.html
igwt_project/: asgi.py  settings.py  urls.py  wsgi.py
