[tool.poetry]
name = "igwt-django-app"
version = "0.1.0"
description = "Testing Azure deployments of Django apps to app service"
authors = ["gilgamesh7 <felidaesrule@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "igwt_django_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
